# AiAgent_backend

./: .env.example.zh-CN  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_import.py
.agent_workspace/anon_print hi/: 01_requirements.md  01_requirements_v2.md  01_requirements_v3.md  02_architecture.md  architect_review.md  development.md  project_complete.md
.agent_workspace/anon_say hello/: 01_requirements.md  02_architecture.md  07_acceptance.md  development.md
.agent_workspace/session_1776686232276/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md  development_v2.md
.agent_workspace/session_1776687601058/: 01_requirements.md  02_architecture.md
.agent_workspace/session_1776688016942/: 01_requirements.md  02_architecture.md
.agent_workspace/session_1776688323173/: 01_requirements.md  02_architecture.md  03_ui_design.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1776689635813/: 01_requirements.md  02_architecture.md
.agent_workspace/session_1776727414323/: 01_requirements.md  02_architecture.md  development.md
.agent_workspace/session_1776727523567/: 01_requirements.md  02_architecture.md  03_ui_design.md
.agent_workspace/session_1776728003868/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1776728186212/: 01_requirements.md  01_requirements_v2.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1776728483915/: 01_requirements.md  07_acceptance.md
.agent_workspace/session_1776815914570/: 01_requirements.md  02_architecture.md  development.md
.agent_workspace/session_1777000488060/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777002270245/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777018690639/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777018945350/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777019323795/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777019472569/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777019605765/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777019777624/: 01_requirements.md  02_architecture.md  07_acceptance.md  development.md
.agent_workspace/session_1777019931787/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777020141359/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777020289120/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777020402769/: 01_requirements.md  02_architecture.md  07_acceptance.md
.agent_workspace/session_1777020843557/: 01_requirements.md  02_architecture.md  07_acceptance.md  development.md
.agent_workspace/session_1777033687636/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md  development_v2.md
.agent_workspace/session_1777036618931/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777084215320/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777125791765/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md  development_v2.md  development_v3.md  development_v4.md
.agent_workspace/session_1777126689944/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md
.agent_workspace/session_1777129623001/: 01_requirements.md  02_architecture.md  07_acceptance.md  architect_review.md  development.md  development_v2.md
alembic/: env.py
alembic/versions/: 001_initial.py  (+8 more)
app/: __init__.py  main.py
docker/: Dockerfile  docker-compose.yml
nginx/: nginx.conf
scripts/: migrate.sh
tests/: __init__.py  conftest.py
(+248 files in other folders)
