[project]
name = "ai-agent-backend"
version = "1.0.0"
description = "AI Agent Backend API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["fastapi", "backend", "api", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # 数据库
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "aioredis>=2.0.1",

    # 认证与安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",

    # AI / LLM
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    "aiohttp>=3.9.0",

    # 向量数据库与检索
    "pgvector>=0.2.0",
    "pgvector[async]>=0.2.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",

    # 对象存储 SDK
    "boto3>=1.34.0",
    "cos-python-sdk-v5>=1.9.0",
    "oss2>=2.18.0",
    "baidubce>=0.8.3",

    # 邮件
    "aiosmtplib>=3.0.0",
    "imapclient>=2.3.0",

    # 社交平台 SDK
    "lark-oapi>=1.0.0",
    "python-telegram-bot>=20.0",

    # 工具库
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "aiofiles>=23.0.0",
    "orjson>=3.9.0",

    # Docker 沙箱
    "docker>=7.0.0",

    # 可观测性
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
